<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_iniciar_sesion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.itesm.m1_srb_labo_login.IniciarSesionActivity">

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_welcome"
        tools:text="@string/welcome"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/imageView" />

    <ImageView
        android:layout_width="180dp"
        app:srcCompat="@drawable/user_account_avatar_person_profile_login_512"
        android:id="@+id/imageView"
        android:layout_height="180dp"
        android:layout_below="@+id/text_welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_password"
        android:text="@string/password"
        android:layout_below="@+id/text_usuario_logeado"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_usuario_logeado"
        android:text="@string/usuario"
        android:layout_marginTop="44dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSalir"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp" />

</RelativeLayout>
