<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.itesm.m1_srb_labo_login.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banco_mundial"
        android:typeface="normal"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
        android:textColor="@color/colorPrimary"
        android:textStyle="normal|bold"
        android:layout_centerHorizontal="true"
        android:id="@+id/textViewBancoMundial"/>

    <TableLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TableRow
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:text=""
                android:ems="10"
                android:id="@+id/editUsuario"
                android:gravity="left"
                android:hint="@string/usuario"
                android:labelFor="@+id/editUsuario"
                />
        </TableRow>

        <TableRow
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/editPassword"
                android:hint="@string/password"
                android:gravity="fill_horizontal"
                android:labelFor="@+id/editPassword"
                />
        </TableRow>

        <TableRow
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/recuperar_contraseña"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tVRecoverPassword"
                android:gravity="center"
                tools:text="@string/recuperar_contraseña"/>
        </TableRow>


        <TableRow
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        <Button
                android:text="@string/iniciar_sesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonIniciarSession" />
         </TableRow>

        <TableRow
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <Button
                android:text="@string/registrarse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonRegistrarse" />
        </TableRow>
    </TableLayout>


</RelativeLayout>
