<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_modificar_contrasena"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mx.itesm.m1_srb_labo_login.ModificarContrasenaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/modificar_contrasena"
        android:typeface="normal"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.DialogWindowTitle"
        android:textColor="@color/colorPrimary"
        android:textStyle="normal|bold"
        android:layout_centerHorizontal="true"
        android:id="@+id/textViewRegistrarse"/>

    <Button
        android:text="@string/aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAceptar"
        android:paddingTop="20dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="93dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPassword2"
        android:hint="@string/password_conf"
        android:gravity="left"
        android:labelFor="@+id/editPassword2"
        android:layout_marginEnd="26dp"
        android:layout_marginTop="76dp"
        android:layout_below="@+id/editPassword"
        android:layout_alignEnd="@+id/textViewRegistrarse" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editPassword"
        android:hint="@string/new_password"
        android:gravity="left"
        android:labelFor="@+id/editPassword"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/textViewRegistrarse"
        android:layout_alignStart="@+id/editPassword2" />


</RelativeLayout>
